Подключение H2. Настройки работы с jdbc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=taco-cloud
 server.port=9090
 spring.thymeleaf.prefix=classpath:/templates/
+spring.datasource.generate-unique-name=false
+spring.datasource.name=tacocloud
