Реализация хранения данных в cassandra, проблема подключения к БД

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ server.port=9090
 spring.thymeleaf.prefix=classpath:/templates/
 spring.datasource.generate-unique-name=false
 spring.datasource.name=tacocloud
+
+spring.cassandra.contact-points=localhost
+spring.cassandra.port=9042
+spring.cassandra.keyspace-name=tacocloud
+spring.cassandra.schema-action=recreate
+spring.cassandra.local-datacenter=datacenter1
+
