Реализация SpringSecurity с регистрацией, верификацией, правом доступа к методам контроллера

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=taco-cloud
-server.port=9090
+server.port=9091
 spring.thymeleaf.prefix=classpath:/templates/
 spring.datasource.generate-unique-name=false
 spring.datasource.name=tacocloud
+spring.jpa.open-in-view=false
+
 
 
 
