Связь заказа с пользователем и проверка пользователя @AuthenticationPrincipal User user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,10 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.datasource.generate-unique-name=false
 spring.datasource.name=tacocloud
 spring.jpa.open-in-view=false
+spring.security.oauth2.client.registration.facebook.client-id=<facebook client id>
+spring.security.oauth2.client.registration.facebook.client-secret=<facebook client secret>
+spring.security.oauth2.client.registration.facebook.scope=email,public_profile
+
 
 
 
